--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Roboto Slab', serif;
 }
 
+.container {
+  margin-top: 10%;
+}
+
 .mood-list {
   border: 1px solid #000;
   padding: 5px;
@@ -9,6 +13,9 @@ body {
 .mood-list .mood-list {
   border: 2px solid green;
   padding: 5px;
+}
+.mood-list .mood-list .mood {
+  margin-bottom: 5%;
 }
 
 /*# sourceMappingURL=style.css.map */
