--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,12 +2,20 @@ body{
     font-family: 'Roboto Slab', serif;
 }
 
+.container {
+    margin-top:10%;
+}
+
 .mood-list{
     border:1px solid #000;
     padding:5px;       
         
     .mood-list{
         border:2px solid green;
-        padding:5px        
+        padding:5px;
+        
+        .mood {
+            margin-bottom:5%;
+        }
     }
 }
