--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,18 @@
-body {
+* {
+  font-family: 'Roboto', sans-serif;
+}
+* h1, * h2 {
   font-family: 'Roboto Slab', serif;
 }
 
 .container {
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .mood-list {
-  border: 1px solid #000;
   padding: 5px;
 }
 .mood-list .mood-list {
-  border: 2px solid green;
   padding: 5px;
 }
 .mood-list .mood-list .mood {
