--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,17 +1,18 @@
-body{
-    font-family: 'Roboto Slab', serif;
+* {
+    font-family: 'Roboto', sans-serif;
+    h1, h2 {
+        font-family: 'Roboto Slab', serif;
+    }
 }
 
 .container {
-    margin-top:10%;
+    margin-top:5%;
 }
 
 .mood-list{
-    border:1px solid #000;
     padding:5px;       
         
     .mood-list{
-        border:2px solid green;
         padding:5px;
         
         .mood {
@@ -19,3 +20,4 @@ body{
         }
     }
 }
+
