--- a/styles/kindWishes/kindwishes.css
+++ b/styles/kindWishes/kindwishes.css
@@ -1,3 +1,15 @@
+#audiobtns {
+  position: relative;
+  top: 20px;
+}
+
+#img-carousel {
+  min-height: 500px;
+  min-width: 500px;
+  border: 5px solid red;
+  margin-bottom: 0;
+}
+
 #step-1 {
   opacity: 0;
   position: absolute;
@@ -18,15 +30,15 @@
 }
 
 .steps {
-  -webkit-animation: fadebears 120s ease-out infinite;
+  -webkit-animation: fadebears 55s ease-out infinite;
   /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadebears 120s ease-out infinite;
+  -moz-animation: fadebears 55s ease-out infinite;
   /* Firefox < 16 */
-  -ms-animation: fadebears 120s ease-out infinite;
+  -ms-animation: fadebears 55s ease-out infinite;
   /* Internet Explorer */
-  -o-animation: fadebears 120s ease-out infinite;
+  -o-animation: fadebears 55s ease-out infinite;
   /* Opera < 12.1 */
-  animation: fadebears 120s ease-out infinite;
+  animation: fadebears 55s ease-out infinite;
   /* Firefox < 16 */
   /* Safari, Chrome and Opera > 12.1 */
   /* Internet Explorer */
