--- a/styles/balloonbreathStyles/balloonbreath.scss
+++ b/styles/balloonbreathStyles/balloonbreath.scss
@@ -1,3 +1,17 @@
+#audiobtns {
+    position: relative;
+    
+}
+
+#balloondiv {
+    min-height:500px;
+    min-width: 500px;
+    margin-bottom: 0;
+}
+
+
+
+
 #balloongif {
     height:300px;
     width:300px;
