--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,13 @@
-* {
-  font-family: 'Roboto', sans-serif;
+section h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
 }
-* h1, * h2 {
-  font-family: 'Roboto Slab', serif;
+section p {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .container {
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 .mood-list {
@@ -17,6 +18,13 @@
 }
 .mood-list .mood-list .mood {
   margin-bottom: 5%;
+}
+
+.mood-list {
+  font-family: 'Shadows Into Light Two', cursive;
+}
+.mood-list h2 {
+  font-size: 3em;
 }
 
 /*# sourceMappingURL=style.css.map */
