--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,12 +1,17 @@
-* {
-    font-family: 'Roboto', sans-serif;
-    h1, h2 {
-        font-family: 'Roboto Slab', serif;
+
+
+section {
+    h1 {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 600;
+    }
+    p {
+        font-family: 'Open Sans', sans-serif;
     }
 }
 
 .container {
-    margin-top:5%;
+    margin-top:2%;
 }
 
 .mood-list{
@@ -21,4 +26,11 @@
     }
 }
 
+
+.mood-list {
+    font-family: 'Shadows Into Light Two', cursive;
+    h2 {
+        font-size: 3em;
+    }
+}
 
