--- a/styles/kindWishes/kindwishes.scss
+++ b/styles/kindWishes/kindwishes.scss
@@ -3,9 +3,9 @@
     
 }
 
-#img-carousel {
-    min-height:500px;
-    min-width: 500px;
+#carousel {
+    min-height:385px;
+    min-width: 385px;
     margin-bottom: 0;
 }
 
