--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,22 +1,17 @@
-
-
-section {
-    h1 {
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 600;
-    }
-    p {
-        font-family: 'Open Sans', sans-serif;
+* {
+        font-family: 'Shadows Into Light Two', cursive;
+    section { 
+        h1 {
+            font-size: 5em;
+        }
     }
 }
-
 .container {
     margin-top:2%;
 }
 
 .mood-list{
     padding:5px; 
-    font-family: 'Shadows Into Light Two', cursive;
     margin: 0 auto;
     h2 {
         font-size: 3em;
