--- a/styles/brainTickle/style.css
+++ b/styles/brainTickle/style.css
@@ -3,10 +3,11 @@
   position: relative;
 }
 
-.img-carousel {
+.carousel {
   min-height: 500px;
   min-width: 500px;
   margin-bottom: 0;
+  padding-top: 5%;
 }
 
 #head {
@@ -22,6 +23,8 @@
 
 #texture-img, #texture-text {
   opacity: 0;
+  -webkit-animation-delay: 26s;
+  animation-delay: 26s;
 }
 
 #temp-img {
@@ -32,21 +35,21 @@
 
 #temp-img, #temp-text {
   opacity: 0;
-  -webkit-animation-delay: 14s;
-  animation-delay: 14s;
+  -webkit-animation-delay: 12s;
+  animation-delay: 12s;
 }
 
 #moisture-img {
   opacity: 0;
   position: relative;
-  right: 5%;
-  top: 0px;
+  right: -4.5%;
+  top: -2px;
 }
 
 #moisture-img, #moisture-text {
   opacity: 0;
-  -webkit-animation-delay: 28s;
-  animation-delay: 28s;
+  -webkit-animation-delay: 40s;
+  animation-delay: 40s;
 }
 
 .symptom-text {
@@ -55,15 +58,15 @@
 }
 
 .symptom, .symptom-text {
-  -webkit-animation: fadein 42s ease-in infinite;
+  -webkit-animation: fadein 42s ease-in-out infinite;
   /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 42s ease-in infinite;
+  -moz-animation: fadein 42s ease-in-out infinite;
   /* Firefox < 16 */
-  -ms-animation: fadein 42s ease-in infinite;
+  -ms-animation: fadein 42s ease-in-out infinite;
   /* Internet Explorer */
-  -o-animation: fadein 42s ease-in infinite;
+  -o-animation: fadein 42s ease-in-out infinite;
   /* Opera < 12.1 */
-  animation: fadein 42s ease-in infinite;
+  animation: fadein 42s ease-in-out infinite;
   /* Firefox < 16 */
   /* Safari, Chrome and Opera > 12.1 */
   /* Internet Explorer */
