--- a/styles/brainTickle/style.scss
+++ b/styles/brainTickle/style.scss
@@ -6,10 +6,11 @@
     
 }
 
-.img-carousel {
+.carousel {
     min-height:500px;
     min-width: 500px;
     margin-bottom: 0;
+    padding-top: 5%;
 }
 
 #head {
@@ -26,6 +27,8 @@
 
 #texture-img, #texture-text {
     opacity: 0;
+    -webkit-animation-delay: 26s; 
+            animation-delay: 26s;
 }
 
 #temp-img {
@@ -36,21 +39,21 @@
 
 #temp-img, #temp-text {
     opacity: 0;
-    -webkit-animation-delay: 14s; 
-            animation-delay: 14s;
+    -webkit-animation-delay: 12s; 
+            animation-delay: 12s;
 }
 
 #moisture-img {
     opacity: 0;
     position: relative;
-    right:5%;    
-    top:0px;
+    right:-4.5%;    
+    top:-2px;
 }
 
 #moisture-img, #moisture-text {
     opacity: 0;
-    -webkit-animation-delay: 28s; 
-            animation-delay: 28s;    
+    -webkit-animation-delay: 40s; 
+            animation-delay: 40s;    
 }
 
 .symptom-text {
@@ -60,11 +63,11 @@
 
 
 .symptom, .symptom-text {
-    -webkit-animation: fadein 42s ease-in infinite; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 42s ease-in infinite; /* Firefox < 16 */
-        -ms-animation: fadein 42s ease-in infinite; /* Internet Explorer */
-         -o-animation: fadein 42s ease-in infinite; /* Opera < 12.1 */
-            animation: fadein 42s ease-in infinite;
+    -webkit-animation: fadein 42s ease-in-out infinite; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 42s ease-in-out infinite; /* Firefox < 16 */
+        -ms-animation: fadein 42s ease-in-out infinite; /* Internet Explorer */
+         -o-animation: fadein 42s ease-in-out infinite; /* Opera < 12.1 */
+            animation: fadein 42s ease-in-out infinite;
     
     @keyframes fadein {
         0% { opacity: 1; }
