--- a/styles/brainTickle/braingTickleStyle.scss
+++ b/styles/brainTickle/braingTickleStyle.scss
@@ -62,7 +62,7 @@
 }
 
 
-.symptom, .symptom-text {
+.symptom, .symptom-text, #head {
     -webkit-animation: fadein 42s ease-in-out infinite; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 42s ease-in-out infinite; /* Firefox < 16 */
         -ms-animation: fadein 42s ease-in-out infinite; /* Internet Explorer */
